k8s-timerboard-static.yaml
apiVersion: v1
kind: Service
metadata:
  name: timerboard-static
spec:
  ports:
  - port: 80 
  selector:
    name: timerboard-static
  type: NodePort
