k8s-timerboard-full.yaml
#
# Static website
#
apiVersion: v1
kind: Service
metadata:
  name: timerboard-static
spec:
  ports:
  - port: 80
  selector:
    name: timerboard-static
  type: NodePort
---
#
# Websocket backend
#
apiVersion: v1
kind: Service
metadata:
  name: waterslide-sov
spec:
  ports:
  - port: 8080
  selector:
    name: waterslide-sov
  type: NodePort
---
#
# Routing
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: waterslide
  namespace: default
  annotations:
    # kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: timerboard.net
    http:
      paths:
      - path: /
        backend:
          serviceName: timerboard-static
          servicePort: 80
      - path: /stream
        backend:
          serviceName: waterslide-sov
          servicePort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: waterslide-tls
  namespace: sock-shop
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - timerboard.net
    secretName: waterslide-tls
  rules:
  - host: timerboard.net
    http:
      paths:
      - path: /
        backend:
          serviceName: timerboard-static
          servicePort: 80
      - path: /stream
        backend:
          serviceName: waterslide-sov
          servicePort: 8080
